# QtInternationalization

./: .gitignore  CMakeLists.txt  QtInternationalization_fr_FR.ts  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp
tests/: Internationalization_Test.cpp
translations/: QtInternalization_es_ES.ts  QtInternationalization_es.ts  QtInternationalization_fr.ts
